@@ -1,3 +1,8 @@
+2001-05-06  Mikhael Goikhman  <migo@homemail.com>
+
+	* fvwm-config.in:
+	fixed --supports-feature broken in the previous commit
+
 2001-05-04  Mikhael Goikhman  <migo@homemail.com>
 
 	* fvwm-config.in:
