@@ -1,3 +1,11 @@
+2001-05-06  Mikhael Goikhman  <migo@homemail.com>
+
+	* acconfig.h:
+	* acinclude.m4:
+	* configure.in:
+	* fvwm/fvwm.c:
+	renamed "Imlib" support to "GDK Imlib"
+
 2001-05-04  Mikhael Goikhman  <migo@homemail.com>
 
 	* NEWS, configure.in:
